tests/compile_fail/conflicting_short.stderr
error: `no_short` is incompatible with `short`.
 --> $DIR/conflicting_short.rs:8:9
  |
8 |     pub value: bool,
  |         ^^^^^
